Fixed unmount stuck with recusive method

--- a/CJMS-Interfaces/AudienceDisplay/src/assets/application.scss
+++ b/CJMS-Interfaces/AudienceDisplay/src/assets/application.scss
@@ -1,13 +1,5 @@
 .audience-display-app {
   // background-color: rgb(75, 75, 75);
   height: 100%;
-
-  th:not(.large), td:not(.large) {
-      text-align: center;
-  }
-
-  td {
-      padding-top: 0.2rem;
-      padding-bottom: 0.2rem;
-  }
+  width: 100%;
 }
